        First sentence is missing or clipped when printing a inline PDF         https://bugs.webkit.org/show_bug.cgi?id=75514         <rdar://problem/10640680>

Reviewed by Dan Bernstein.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::headerHeight):
        (WebKit::WebPageProxy::footerHeight):
        (WebKit::WebPageProxy::drawHeader):
        (WebKit::WebPageProxy::drawFooter):
        Do not ask the client about headers and footers when printing a PDF.



Canonical link: https://commits.webkit.org/92336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104049 268f45cc-cd09-0410-ab3c-d52691b4dbfc